--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 
 </head>
 <body class="fondo">
-
-  <div class="card">
-      <img class="imagen" src="./images/image-qr-code.png" alt="">
-      <p class="titulo">Improve your front-end skills by building projects</p>
-      <p class="subtitulo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Lissett Leal</a>.
-  </div>
+<main class="card">
+  <img class="imagen" src="./images/image-qr-code.png" alt="">
+  <h1 class="titulo">Improve your front-end skills by building projects</h1>
+  <p class="subtitulo">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+</main>
+<footer class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Lissett Leal</a>.
+</footer>
 
 </body>
 </html>
